--- a/libs/base/src/shared/components/ui/slider/slider.component.html
+++ b/libs/base/src/shared/components/ui/slider/slider.component.html
@@ -1,26 +1,32 @@
-<div [ngSwitch]="type" class="w-full flex flex-col">
-  <p *ngIf="label">{{ label }}</p>
-  <mat-slider
-    [showTickMarks]="isDoted"
-    [discrete]="hasLabel"
-    [disabled]="isDisabled"
-    [min]="min"
-    [max]="max"
-    [step]="steps"
-    *ngSwitchCase="'basic'"
-  >
-    <input [formControl]="control" matSliderThumb />
-  </mat-slider>
-  <mat-slider
-    [showTickMarks]="isDoted"
-    [discrete]="hasLabel"
-    [disabled]="isDisabled"
-    [min]="min"
-    [max]="max"
-    [step]="steps"
-    *ngSwitchCase="'range'"
-  >
-    <input matSliderStartThumb [value]="min" [formControl]="$any(formGroup.controls.start)" />
-    <input matSliderEndThumb [value]="max" [formControl]="$any(formGroup.controls.end)" />
-  </mat-slider>
+<div class="w-full flex flex-col">
+  @if(label) {
+    <p>{{ label }}</p>
+  }
+  @switch (type) {
+    @case ('basic') {
+      <mat-slider
+      [showTickMarks]="isDoted"
+      [discrete]="hasLabel"
+      [disabled]="isDisabled"
+      [min]="min"
+      [max]="max"
+      [step]="steps"
+    >
+      <input [formControl]="control" matSliderThumb />
+    </mat-slider>
+    }
+    @case ('range') {
+      <mat-slider
+      [showTickMarks]="isDoted"
+      [discrete]="hasLabel"
+      [disabled]="isDisabled"
+      [min]="min"
+      [max]="max"
+      [step]="steps"
+    >
+      <input matSliderStartThumb [value]="min" [formControl]="$any(formGroup.controls.start)" />
+      <input matSliderEndThumb [value]="max" [formControl]="$any(formGroup.controls.end)" />
+    </mat-slider>
+    }
+}
 </div>
