--- a/libs/base/src/shared/components/ui/switch/switch.component.html
+++ b/libs/base/src/shared/components/ui/switch/switch.component.html
@@ -1,4 +1,6 @@
 <div class="flex items-center">
-  <p *ngIf="label" class="flex items-center h-14 pe-2">{{ label }}</p>
+  @if (label) {
+    <p class="flex items-center h-14 pe-2">{{ label }}</p>
+  }
   <mat-slide-toggle [formControl]="control" color="primary"> </mat-slide-toggle>
 </div>
