--- a/libs/base/src/shared/components/features/bottom-controls/bottom-controls.component.html
+++ b/libs/base/src/shared/components/features/bottom-controls/bottom-controls.component.html
@@ -7,12 +7,13 @@
   [disabled]="disabled || insufficientPermission()"
   [matTooltip]="insufficientPermission() ? 'شما دسترسی برای انجام این فعالیت را ندارید.' : ''"
   >{{ submitText }}</ui-button
->
-<ui-button
-  *ngIf="!hideCancel && !!cancelText"
-  [appearance]="'stroked'"
-  class="no-btn {{ cancelClass ?? '' }}"
-  [route]="cancelRoute"
-  (onClick)="onCancelClick()"
-  >{{ cancelText }}</ui-button
->
+  >
+  @if (!hideCancel && !!cancelText) {
+    <ui-button
+      [appearance]="'stroked'"
+      class="no-btn {{ cancelClass ?? '' }}"
+      [route]="cancelRoute"
+      (onClick)="onCancelClick()"
+      >{{ cancelText }}</ui-button
+      >
+    }
