--- a/libs/base/src/shared/components/features/printable-table/printable-table.component.html
+++ b/libs/base/src/shared/components/features/printable-table/printable-table.component.html
@@ -1,22 +1,28 @@
 <div #Printer="alxPrint" alxPrint [hidden]="true">
-  <ng-container *ngLet="_currentData() as currentData">
-    <table class="feature-printable-table">
-      <thead>
-        <tr>
-          <th #Headers *ngFor="let val of currentData?.header ?? []">{{ val }}</th>
+  @let currentData = _currentData();
+  <table class="feature-printable-table">
+    <thead>
+      <tr>
+        @for (val of currentData?.header ?? []; track val) {
+          <th #Headers>{{ val }}</th>
+        }
+      </tr>
+    </thead>
+    <tbody>
+      @for (row of currentData?.rows ?? []; track row) {
+        <tr #Rows>
+          @for (val of row; track val) {
+            <td #Cols>
+              {{ val }}
+            </td>
+          }
         </tr>
-      </thead>
-      <tbody>
-        <tr #Rows *ngFor="let row of currentData?.rows ?? []">
-          <td #Cols *ngFor="let val of row">
-            {{ val }}
-          </td>
-        </tr>
-      </tbody>
-    </table>
-
-    <div class="mt-7 text-sm empty:hidden">
-      <p #Extras *ngFor="let item of currentData?.extra ?? []">{{ item.label }} : {{ item.value }}</p>
-    </div>
-  </ng-container>
+      }
+    </tbody>
+  </table>
+  <div class="mt-7 text-sm empty:hidden">
+    @for (item of currentData?.extra ?? []; track item) {
+      <p #Extras>{{ item.label }} : {{ item.value }}</p>
+    }
+  </div>
 </div>
