--- a/libs/base/src/shared/components/features/table/table-form-menu/table-form-menu.component.html
+++ b/libs/base/src/shared/components/features/table/table-form-menu/table-form-menu.component.html
@@ -1,5 +1,5 @@
 <mat-menu #MenuForm backdropClass="ui-backdrop-blur-sm">
-  <ng-container *ngIf="formOptions() && showForm()">
+  @if (formOptions() && showForm()) {
     <div
       cdkTrapFocus
       [cdkTrapFocusAutoCapture]="true"
@@ -9,11 +9,11 @@
       (keydown)="$event.stopPropagation()"
       (keydown.enter)="Controller.submit()"
       (keydown.escape)="Controller.cancel()"
-    >
+      >
       <span class="text-lg font-medium">{{
         formOptions()!.mode === 'create'
-          ? ADD_TEXT + ' ' + formOptions()!.itemName + ' ' + NEW_TEXT
-          : EDIT_TEXT + ' ' + formOptions()!.itemName
+        ? ADD_TEXT + ' ' + formOptions()!.itemName + ' ' + NEW_TEXT
+        : EDIT_TEXT + ' ' + formOptions()!.itemName
       }}</span>
       <span class="text-sm font-normal mt-1">مشخصات را وارد کنید و دکمه ثبت را بزنید</span>
       <ui-icon
@@ -43,5 +43,5 @@
         (onCancel)="onFormMenuCancel()"
       ></feature-bottom-controls>
     </div>
-  </ng-container>
+  }
 </mat-menu>
