--- a/libs/base/src/shared/components/ui/date-picker/date-picker.component.html
+++ b/libs/base/src/shared/components/ui/date-picker/date-picker.component.html
@@ -1,6 +1,12 @@
-<div class="rounded-4 px-2 py-4 bg-surface-light-surface overflow-hidden" [ngSwitch]="type">
-  <ng-container *ngSwitchCase="'calendar'" [ngTemplateOutlet]="calendar"></ng-container>
-  <ng-container *ngSwitchCase="'date-picker'" [ngTemplateOutlet]="datepicker"></ng-container>
+<div class="rounded-4 px-2 py-4 bg-surface-light-surface overflow-hidden">
+  @switch (type) {
+    @case ('calendar') {
+      <ng-container [ngTemplateOutlet]="calendar"></ng-container>
+    }
+    @case ('date-picker') {
+    <ng-container [ngTemplateOutlet]="datepicker"></ng-container>
+    }
+  }
   <hr />
   <div class="h-16 w-full flex flex-row items-center justify-end">
     <ui-button [appearance]="'text'" (onClick)="cancel()">Cancel</ui-button>
@@ -12,14 +18,18 @@
   <div class="w-full flex flex-col justify-between py-2 h-16">
     <p class="title">{{ title }}</p>
     <div class="flex flex-row items-center justify-between">
-      <p *ngIf="mode === 'range'">
-        {{ dateRangeGroup.controls.start.value ?? '' }}
-        <span>-</span>
-        {{ dateRangeGroup.controls.end.value ?? '' }}
-      </p>
-      <p *ngIf="mode === 'one-day'">
-        {{ dateRangeGroup.controls.start.value }}
-      </p>
+      @if (mode === 'range') {
+        <p>
+          {{ dateRangeGroup.controls.start.value ?? '' }}
+          <span>-</span>
+          {{ dateRangeGroup.controls.end.value ?? '' }}
+        </p>
+      }
+      @if (mode === 'one-day') {
+        <p>
+          {{ dateRangeGroup.controls.start.value }}
+        </p>
+      }
       <mat-icon class="w-4 h-4 cursor-pointer" svgIcon="edit"></mat-icon>
     </div>
   </div>
@@ -28,7 +38,7 @@
 </ng-template>
 
 <ng-template #datepicker>
-  <div [ngSwitch]="mode" class="date-picker-container">
+  <div class="date-picker-container">
     <div class="flex flex-col">
       <p class="title">{{ title }}</p>
       <div class="w-full flex flex-row justify-between items-center">
@@ -37,42 +47,54 @@
       </div>
     </div>
     <hr />
-    <div *ngSwitchCase="'range'" class="w-full flex flex-row p-2 items-center justify-between">
-      <ui-field
-        (keyup)="inputDateManually(dateRangeGroup.controls.start, 'first')"
-        [prefixIcon]="undefined"
-        class="w-[45%] text-xs"
-        placeholder="yy/mm/dd"
-        [control]="dateRangeGroup.controls.start"
-        label="Start date"
-      ></ui-field>
-      <ui-field
-        (keyup)="inputDateManually(dateRangeGroup.controls.end, 'second')"
-        [prefixIcon]="undefined"
-        class="w-[45%] text-xs"
-        placeholder="yy/mm/dd"
-        [control]="dateRangeGroup.controls.end"
-        label="End date"
-      ></ui-field>
-    </div>
-    <div *ngSwitchCase="'one-day'" class="p-2 flex items-center justify-center">
-      <ui-field
-        (keyup)="inputDateManually(oneDayFormControl)"
-        [prefixIcon]="undefined"
-        [control]="oneDayFormControl"
-        class="bg-transparent"
-        label="Date"
-        placeholder="Date"
-      ></ui-field>
-    </div>
+    @switch (mode) {
+      @case ('range') {
+        <div class="w-full flex flex-row p-2 items-center justify-between">
+          <ui-field
+            (keyup)="inputDateManually(dateRangeGroup.controls.start, 'first')"
+            [prefixIcon]="undefined"
+            class="w-[45%] text-xs"
+            placeholder="yy/mm/dd"
+            [control]="dateRangeGroup.controls.start"
+            label="Start date"
+          ></ui-field>
+          <ui-field
+            (keyup)="inputDateManually(dateRangeGroup.controls.end, 'second')"
+            [prefixIcon]="undefined"
+            class="w-[45%] text-xs"
+            placeholder="yy/mm/dd"
+            [control]="dateRangeGroup.controls.end"
+            label="End date"
+          ></ui-field>
+        </div>
+      }
+      @case ('one-day') {
+        <div class="p-2 flex items-center justify-center">
+          <ui-field
+            (keyup)="inputDateManually(oneDayFormControl)"
+            [prefixIcon]="undefined"
+            [control]="oneDayFormControl"
+            class="bg-transparent"
+            label="Date"
+            placeholder="Date"
+          ></ui-field>
+        </div>
+      }
+  }
   </div>
 </ng-template>
 
 <ng-template #matCalendar>
-  <div [ngSwitch]="mode">
-    <mat-calendar *ngSwitchCase="'range'" (selectedChange)="selectRange($event)" [selected]="selectedDateRange">
-    </mat-calendar>
-    <mat-calendar *ngSwitchCase="'one-day'" [selected]="oneDay" (selectedChange)="selectOneDay($event)"> </mat-calendar>
+  <div>
+    @switch (mode) {
+    @case('range') {
+      <mat-calendar (selectedChange)="selectRange($event)" [selected]="selectedDateRange">
+      </mat-calendar>
+    }
+    @case ('one-day') {
+    <mat-calendar [selected]="oneDay" (selectedChange)="selectOneDay($event)"> </mat-calendar>
+    }
+  }
   </div>
 </ng-template>
 
